# django_hepasense

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/accounts/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/urls/: __init__.py  auth_urls.py
apps/articles/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/articles/management/commands/: seed_articles.py
apps/articles/migrations/: 0001_initial.py
apps/devices/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/devices/migrations/: 0001_initial.py
apps/health_monitor/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/health_monitor/management/commands/: seed_demo_data.py
apps/health_monitor/migrations/: 0001_initial.py
config/: settings.py  urls.py
