[project]
name = "hepasense-backend"
version = "0.1.0"
description = "HepaSense Healthcare Platform Backend"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1,<6.1",
    "djangorestframework>=3.15.0",
    "djangorestframework-simplejwt>=5.3.0",
    "django-cors-headers>=4.3.0",
    "django-filter>=24.0",
    "python-decouple>=3.8",
    "psycopg2-binary>=2.9.9",
    "django-otp>=1.3.0",
    "qrcode>=7.4.0",
    "cryptography>=41.0.0",
    "pillow>=10.1.0",
]

# Format baru untuk uv (pengganti tool.uv.dev-dependencies)
[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"